<resources>
    <string name="app_name">Sensor</string>
    <string name="btn_one">Verification Complete</string>
    <string name="btn_two">Verification Failed</string>
    <string name="btn_three">Scanning For Sensor</string>
    <string name="btn_four">Confirmation</string>
    <string name="head">VERIFICATION COMPLETE</string>
    <string name="number">Number</string>
    <string name="option">CONTINUE</string>
    <string name="tick">tick</string>
    <string name="head_fail">VERIFICATION FAILED</string>
    <string name="list">This may have happened for a few reasons:</string>
    <string name="listitem_one">*  Ensure that the hub is powered on</string>
    <string name="listitem_two">*  Ensure that the SIM card inserted into the hub is active, and has sufficient credit to send /recieve SMS messages</string>
    <string name="listitem_three">*  Ensure that hub is power on</string>
    <string name="option_one">GO BACK</string>
    <string name="option_two">TRY AGAIN</string>
    <string name="cross">cross</string>
    <string name="ques">ARE YOU SURE?</string>
    <string name="text1">This cannot be undone. Once the device has been formatted, all connected sensors will be disconnected.</string>
    <string name="text2">This can take up to a few minutes. You will be notified via SMS once the device has been formatted.</string>
    <string name="option_three">NO, GO BACK </string>
    <string name="option_four">YES, I AM SURE </string>
    <string name="head_scan">SCANNING FOR SENSOR</string>
    <string name="text3">This may take a few moments</string>
    <string name="text4">Please be patient</string>
    <string name="option_five">Cancel</string>
    <string name="signal">signal</string>
    <string name="btn_six">DONE</string>
    <string name="tick1">tick</string>
    <string name="todo">TODO</string>
    <string name="btn_seven">Confirm</string>
    <string name="text5">You are the primary user for this Hub! You cannot unregister yourself.You may,however, format the device.</string>
    <string name="text6">This will notify all other registered users before disarming and wiping the Hub to factory settings.</string>
    <string name="text7">All registered sensors will also be unregistered.</string>
    <string name="neg">NO</string>
    <string name="co_pos">YES, FORMAT</string>
    <string name="btn_eight">Confirm Remove</string>
    <string name="text8">The sensor will no longer be a part of the Hub, and will not be able to trigger the siren if interrupted.</string>
    <string name="text9">You can always register the sensor again later.</string>
    <string name="fo_pos">YES, REMOVE</string>
    <string name="btn_nine">UNREGISTER USER</string>
    <string name="text10">Registered since 03/03/1990</string>
    <string name="text11">Name</string>
    <string name="text12">Registered Phone No.</string>
    <string name="tod">TODO</string>
    <string name="btn_ten">Register</string>
    <string name="text13">Registered users will be notified via SMS and/or Phone call along with your number when the SmartHub alarm is triggered.</string>
    <string name="text14">Registered users can manually triggered the SmartHub Alarm through the App.</string>
    <string name="hint1">Full Name here</string>
    <string name="hint2">+91 xxxx xx xxxx</string>
    <string name="text15">ADD USER</string>
    <string name="btn_five">Max User</string>
    <string name="text16">A confirmation SMS has been sent to the registered phone number.</string>
    <string name="text17">MAX USER LIMIT REACHED</string>
    <string name="text18">DONE ADDING USERS</string>
    <string name="text19">A very lengthy name goes here....</string>
    <string name="menu_add">menu_add</string>
    <string name="menu_setting">menu settings</string>
    <string name="hub_home">Hub Layout</string>
    <string name="head_hub">MANAGE SENSORS</string>
    <string name="followed_hub">5 Active Sensors</string>
    <string name="disarmed">Disarmed</string>
    <string name="setting_siren">Manual Siren Control</string>
    <string name="hub_arming">Device Arming</string>
    <string name="hub_btn_silence">SILENCE</string>
    <string name="hub_btn_ring">RING</string>
    <string name="hub_btn_disarm">DISARM</string>
    <string name="hub_btn_arm">ARM</string>
    <string name="try_recycle">RECYCLER VIEW</string>


</resources>
