<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirm">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="327dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/ques"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/text5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="325dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/text6"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="325dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="@string/text7"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="52dp"
        android:text="@string/neg"
        android:textSize="@dimen/head"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:text="@string/co_pos"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />
</androidx.constraintlayout.widget.ConstraintLayout>