<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scan">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:text="@string/head_scan"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="127dp"
        android:layout_height="78dp"
        android:contentDescription="@string/signal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:srcCompat="@drawable/wifi" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="252dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textSize="@dimen/label_btn"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="185dp"
        android:layout_height="23dp"
        android:text="@string/text4"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:text="@string/option_five"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />
</androidx.constraintlayout.widget.ConstraintLayout>