<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maxusers">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="227dp"
        android:layout_height="143dp"
        android:contentDescription="@string/tod"
        android:src="@drawable/virat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="316dp"
        android:layout_height="35dp"
        android:text="@string/text19"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:text="@string/number"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/label_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="280dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:text="@string/text13"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:text="@string/text16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:text="@string/text17"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:text="@string/max_user_done"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />
</androidx.constraintlayout.widget.ConstraintLayout>