<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmremv">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/ques"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="310dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/text8"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="311dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/text9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="36dp"
        android:text="@string/neg"
        android:textAlignment="center"
        android:textSize="@dimen/head"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="131dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:text="@string/fo_pos"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />
</androidx.constraintlayout.widget.ConstraintLayout>